--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -61,6 +61,7 @@ HOST-SUFFIX,joyhd.net,DIRECT
 HOST-SUFFIX,kamept.com,DIRECT
 HOST-SUFFIX,pt.keepfrds.com,DIRECT
 HOST-SUFFIX,kingshome.top,DIRECT
+HOST-SUFFIX,lemonhd.club,DIRECT
 HOST-SUFFIX,lemonhd.org,DIRECT
 HOST-SUFFIX,m-team.cc,DIRECT
 HOST-SUFFIX,m-team.io,DIRECT
