Add raingfh.top to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -96,6 +96,7 @@ HOST-SUFFIX,pttime.org,DIRECT
 HOST-SUFFIX,pthome.net,DIRECT
 HOST-SUFFIX,qingwapt.com,DIRECT
 HOST-SUFFIX,railgunpt.com,DIRECT
+HOST-SUFFIX,raingfh.top,DIRECT
 HOST-SUFFIX,rainbowisland.net,DIRECT
 HOST-SUFFIX,redleaves.cc,DIRECT
 HOST-SUFFIX,rousi.zip,DIRECT
