--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -29,6 +29,7 @@ HOST-SUFFIX,fsm.name,DIRECT
 HOST-SUFFIX,gainbound.net,DIRECT
 HOST-SUFFIX,gamegamept.com,DIRECT
 HOST-SUFFIX,greatposterwall.com,DIRECT
+HOST-SUFFIX,gtkpw.xyz,DIRECT
 HOST-SUFFIX,haidan.video,DIRECT
 HOST-SUFFIX,hares.top,DIRECT
 HOST-SUFFIX,hdarea.co,DIRECT
