--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -115,6 +115,7 @@ HOST-SUFFIX,tu88.men,DIRECT
 HOST-SUFFIX,ubits.club,DIRECT
 HOST-SUFFIX,ultrahd.net,DIRECT
 HOST-SUFFIX,unipt.org,DIRECT
+HOST-SUFFIX,wintersakura.net,DIRECT
 HOST-SUFFIX,yemapt.org,DIRECT
 HOST-SUFFIX,zhixing.bjtu.edu.cn,DIRECT
 HOST-SUFFIX,zhuque.in,DIRECT
