Add dragonhd.xyz to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -22,6 +22,7 @@ HOST-SUFFIX,crabpt.vip,DIRECT
 HOST-SUFFIX,cyanbug.net,DIRECT
 HOST-SUFFIX,discfan.net,DIRECT
 HOST-SUFFIX,dicmusic.com,DIRECT
+HOST-SUFFIX,dragonhd.xyz,DIRECT
 HOST-SUFFIX,dragonbite.org,DIRECT
 HOST-SUFFIX,et8.org,DIRECT
 HOST-SUFFIX,pt.eastgame.org,DIRECT
