Add ptzone.xyz to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -62,6 +62,7 @@ HOST-SUFFIX,huno.pt,DIRECT
 HOST-SUFFIX,joyhd.net,DIRECT
 HOST-SUFFIX,kamept.com,DIRECT
 HOST-SUFFIX,pt.keepfrds.com,DIRECT
+HOST-SUFFIX,ptzone.xyz,DIRECT
 HOST-SUFFIX,kingshome.top,DIRECT
 HOST-SUFFIX,lemonhd.club,DIRECT
 HOST-SUFFIX,lemonhd.org,DIRECT
