Add kufei.org to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -61,6 +61,7 @@ HOST-SUFFIX,hudbt.hust.edu.cn,DIRECT
 HOST-SUFFIX,huno.pt,DIRECT
 HOST-SUFFIX,joyhd.net,DIRECT
 HOST-SUFFIX,kamept.com,DIRECT
+HOST-SUFFIX,kufei.org,DIRECT
 HOST-SUFFIX,pt.keepfrds.com,DIRECT
 HOST-SUFFIX,ptzone.xyz,DIRECT
 HOST-SUFFIX,kingshome.top,DIRECT
