--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -57,6 +57,7 @@ HOST-SUFFIX,hdzone.me,DIRECT
 HOST-SUFFIX,hhanclub.top,DIRECT
 HOST-SUFFIX,hhdream.com,DIRECT
 HOST-SUFFIX,htpt.cc,DIRECT
+HOST-SUFFIX,hitpt.com,DIRECT
 HOST-SUFFIX,hudbt.hust.edu.cn,DIRECT
 HOST-SUFFIX,huno.pt,DIRECT
 HOST-SUFFIX,joyhd.net,DIRECT
