--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -91,6 +91,7 @@ HOST-SUFFIX,ptchdbits.co,DIRECT
 HOST-SUFFIX,pterclub.com,DIRECT
 HOST-SUFFIX,pterclub.net,DIRECT
 HOST-SUFFIX,ptfans.org,DIRECT
+HOST-SUFFIX,ptlover.cc,DIRECT
 HOST-SUFFIX,ptlgs.org,DIRECT
 HOST-SUFFIX,ptfiles.net,DIRECT
 HOST-SUFFIX,pt.msg.vg,DIRECT
