--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -115,6 +115,7 @@ HOST-SUFFIX,star-space.net,DIRECT
 HOST-SUFFIX,sugoimusic.me,DIRECT
 HOST-SUFFIX,sunnypt.top,DIRECT
 HOST-SUFFIX,tjupt.org,DIRECT
+HOST-SUFFIX,tmpt.top,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
 HOST-SUFFIX,tu88.men,DIRECT
 HOST-SUFFIX,ubits.club,DIRECT
