--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -36,6 +36,7 @@ HOST-SUFFIX,hares.top,DIRECT
 HOST-SUFFIX,hdarea.co,DIRECT
 HOST-SUFFIX,hdarea.club,DIRECT
 HOST-SUFFIX,hdater.com,DIRECT
+HOST-SUFFIX,hdbao.cc,DIRECT
 HOST-SUFFIX,hdchina.org,DIRECT
 HOST-SUFFIX,hdcity.leniter.org,DIRECT
 HOST-SUFFIX,hddolby.com,DIRECT
