Add cdfile.org to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -16,6 +16,7 @@ HOST-SUFFIX,byr.pt,DIRECT
 HOST-SUFFIX,camoe.cn,DIRECT
 HOST-SUFFIX,carpt.net,DIRECT
 HOST-SUFFIX,ccfbits.org,DIRECT
+HOST-SUFFIX,cdfile.org,DIRECT
 HOST-SUFFIX,chdbits.co,DIRECT
 HOST-SUFFIX,credit.pt,DIRECT
 HOST-SUFFIX,crabpt.vip,DIRECT
