Add torrenthub.club to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -117,6 +117,7 @@ HOST-SUFFIX,star-space.net,DIRECT
 HOST-SUFFIX,sugoimusic.me,DIRECT
 HOST-SUFFIX,sunnypt.top,DIRECT
 HOST-SUFFIX,tjupt.org,DIRECT
+HOST-SUFFIX,torrenthub.club,DIRECT
 HOST-SUFFIX,tmpt.top,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
 HOST-SUFFIX,tu88.men,DIRECT
