Add pt.itzmx.com to HOST-SUFFIX list

--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -96,6 +96,7 @@ HOST-SUFFIX,ptfans.org,DIRECT
 HOST-SUFFIX,ptlover.cc,DIRECT
 HOST-SUFFIX,ptlgs.org,DIRECT
 HOST-SUFFIX,ptfiles.net,DIRECT
+HOST-SUFFIX,pt.itzmx.com,DIRECT
 HOST-SUFFIX,pt.msg.vg,DIRECT
 HOST-SUFFIX,ptsbao.club,DIRECT
 HOST-SUFFIX,pt.0ff.cc,DIRECT
