--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -111,6 +111,7 @@ HOST-SUFFIX,redleaves.cc,DIRECT
 HOST-SUFFIX,rousi.zip,DIRECT
 HOST-SUFFIX,rousipro.net,DIRECT
 HOST-SUFFIX,pt.sjtu.edu.cn,DIRECT
+HOST-SUFFIX,sewerpt.com,DIRECT
 HOST-SUFFIX,skyeysnow.com,DIRECT
 HOST-SUFFIX,pt.soulvoice.club,DIRECT
 HOST-SUFFIX,springsunday.net,DIRECT
