--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -9,12 +9,15 @@ HOST-SUFFIX,52movie.top,DIRECT
 HOST-SUFFIX,acg.rip,DIRECT
 HOST-SUFFIX,audiences.me,DIRECT
 HOST-SUFFIX,azusa.wiki,DIRECT
+HOST-SUFFIX,agsvpt.com,DIRECT
 HOST-SUFFIX,beitai.pt,DIRECT
+HOST-SUFFIX,bilibili.download,DIRECT
 HOST-SUFFIX,bj-share.info,DIRECT
 HOST-SUFFIX,btschool.club,DIRECT
 HOST-SUFFIX,byr.pt,DIRECT
 HOST-SUFFIX,camoe.cn,DIRECT
 HOST-SUFFIX,carpt.net,DIRECT
+HOST-SUFFIX,cspt.top,DIRECT
 HOST-SUFFIX,ccfbits.org,DIRECT
 HOST-SUFFIX,cdfile.org,DIRECT
 HOST-SUFFIX,chdbits.co,DIRECT
@@ -67,6 +70,7 @@ HOST-SUFFIX,kamept.com,DIRECT
 HOST-SUFFIX,kufei.org,DIRECT
 HOST-SUFFIX,pt.keepfrds.com,DIRECT
 HOST-SUFFIX,ptzone.xyz,DIRECT
+HOST-SUFFIX,playletpt.xyz,DIRECT
 HOST-SUFFIX,kingshome.top,DIRECT
 HOST-SUFFIX,lemonhd.club,DIRECT
 HOST-SUFFIX,lemonhd.org,DIRECT
