--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -78,6 +78,7 @@ HOST-SUFFIX,m-team.cc,DIRECT
 HOST-SUFFIX,m-team.io,DIRECT
 HOST-SUFFIX,mocat.c,DIRECT
 HOST-SUFFIX,momentpt.net,DIRECT
+HOST-SUFFIX,njtupt.top,DIRECT
 HOST-SUFFIX,nanyangpt.com,DIRECT
 HOST-SUFFIX,nethd.org,DIRECT
 HOST-SUFFIX,nexusphp.org,DIRECT
@@ -127,6 +128,7 @@ HOST-SUFFIX,torrenthub.club,DIRECT
 HOST-SUFFIX,tmpt.top,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
 HOST-SUFFIX,tu88.men,DIRECT
+HOST-SUFFIX,xingyungept.org,DIRECT
 HOST-SUFFIX,ubits.club,DIRECT
 HOST-SUFFIX,ultrahd.net,DIRECT
 HOST-SUFFIX,unipt.org,DIRECT
@@ -135,3 +137,4 @@ HOST-SUFFIX,yemapt.org,DIRECT
 HOST-SUFFIX,zhixing.bjtu.edu.cn,DIRECT
 HOST-SUFFIX,zhuque.in,DIRECT
 HOST-SUFFIX,zmpt.cc,DIRECT
+HOST-SUFFIX,zeus.hamsters.space,DIRECT
