--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -128,6 +128,7 @@ HOST-SUFFIX,torrenthub.club,DIRECT
 HOST-SUFFIX,tmpt.top,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
 HOST-SUFFIX,tu88.men,DIRECT
+HOST-SUFFIX,tokyopt.xyz,DIRECT
 HOST-SUFFIX,xingyungept.org,DIRECT
 HOST-SUFFIX,ubits.club,DIRECT
 HOST-SUFFIX,ultrahd.net,DIRECT
@@ -137,4 +138,5 @@ HOST-SUFFIX,yemapt.org,DIRECT
 HOST-SUFFIX,zhixing.bjtu.edu.cn,DIRECT
 HOST-SUFFIX,zhuque.in,DIRECT
 HOST-SUFFIX,zmpt.cc,DIRECT
+HOST-SUFFIX,zrpt.cc,DIRECT
 HOST-SUFFIX,zeus.hamsters.space,DIRECT
