--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -4,12 +4,14 @@
 # Total: ~90 Sites
 # ==================================
 HOST-SUFFIX,1ptba.com,DIRECT
+HOST-SUFFIX,13city.org,DIRECT
 HOST-SUFFIX,52pt.site,DIRECT
 HOST-SUFFIX,52movie.top,DIRECT
 HOST-SUFFIX,acg.rip,DIRECT
 HOST-SUFFIX,audiences.me,DIRECT
 HOST-SUFFIX,azusa.wiki,DIRECT
 HOST-SUFFIX,agsvpt.com,DIRECT
+HOST-SUFFIX,baozi.cc,DIRECT
 HOST-SUFFIX,beitai.pt,DIRECT
 HOST-SUFFIX,bilibili.download,DIRECT
 HOST-SUFFIX,bj-share.info,DIRECT
@@ -27,6 +29,8 @@ HOST-SUFFIX,cyanbug.net,DIRECT
 HOST-SUFFIX,discfan.net,DIRECT
 HOST-SUFFIX,dicmusic.com,DIRECT
 HOST-SUFFIX,dragonhd.xyz,DIRECT
+HOST-SUFFIX,dubhe.site,DIRECT
+HOST-SUFFIX,duckboobee.org,DIRECT
 HOST-SUFFIX,dragonbite.org,DIRECT
 HOST-SUFFIX,et8.org,DIRECT
 HOST-SUFFIX,pt.eastgame.org,DIRECT
@@ -36,6 +40,7 @@ HOST-SUFFIX,gamegamept.com,DIRECT
 HOST-SUFFIX,greatposterwall.com,DIRECT
 HOST-SUFFIX,gtkpw.xyz,DIRECT
 HOST-SUFFIX,haidan.video,DIRECT
+HOST-SUFFIX,hxpt.org,DIRECT
 HOST-SUFFIX,hares.top,DIRECT
 HOST-SUFFIX,hdarea.co,DIRECT
 HOST-SUFFIX,hdarea.club,DIRECT
@@ -72,13 +77,18 @@ HOST-SUFFIX,pt.keepfrds.com,DIRECT
 HOST-SUFFIX,ptzone.xyz,DIRECT
 HOST-SUFFIX,playletpt.xyz,DIRECT
 HOST-SUFFIX,kingshome.top,DIRECT
+HOST-SUFFIX,luckpt.de,DIRECT
 HOST-SUFFIX,lemonhd.club,DIRECT
 HOST-SUFFIX,lemonhd.org,DIRECT
+HOST-SUFFIX,longpt.org,DIRECT
+HOST-SUFFIX,lajidui.top,DIRECT
 HOST-SUFFIX,m-team.cc,DIRECT
 HOST-SUFFIX,m-team.io,DIRECT
 HOST-SUFFIX,mocat.c,DIRECT
 HOST-SUFFIX,momentpt.net,DIRECT
+HOST-SUFFIX,muxuege.org,DIRECT
 HOST-SUFFIX,njtupt.top,DIRECT
+HOST-SUFFIX,novahd.top,DIRECT
 HOST-SUFFIX,nanyangpt.com,DIRECT
 HOST-SUFFIX,nethd.org,DIRECT
 HOST-SUFFIX,nexusphp.org,DIRECT
@@ -106,6 +116,7 @@ HOST-SUFFIX,pt.msg.vg,DIRECT
 HOST-SUFFIX,ptsbao.club,DIRECT
 HOST-SUFFIX,pt.0ff.cc,DIRECT
 HOST-SUFFIX,pt.skit.me,DIRECT
+HOST-SUFFIX,ptlao.top,DIRECT
 HOST-SUFFIX,pttime.org,DIRECT
 HOST-SUFFIX,pthome.net,DIRECT
 HOST-SUFFIX,qingwapt.com,DIRECT
@@ -123,7 +134,9 @@ HOST-SUFFIX,springsunday.net,DIRECT
 HOST-SUFFIX,star-space.net,DIRECT
 HOST-SUFFIX,sugoimusic.me,DIRECT
 HOST-SUFFIX,sunnypt.top,DIRECT
+HOST-SUFFIX,tangpt.top,DIRECT
 HOST-SUFFIX,tjupt.org,DIRECT
+HOST-SUFFIX,torrenthub.club,DIRECT
 HOST-SUFFIX,torrenthub.club,DIRECT
 HOST-SUFFIX,tmpt.top,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
