--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -139,6 +139,7 @@ HOST-SUFFIX,tjupt.org,DIRECT
 HOST-SUFFIX,torrenthub.club,DIRECT
 HOST-SUFFIX,torrenthub.club,DIRECT
 HOST-SUFFIX,tmpt.top,DIRECT
+HOST-SUFFIX,tey.cc,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
 HOST-SUFFIX,tu88.men,DIRECT
 HOST-SUFFIX,tokyopt.xyz,DIRECT
