--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -1,7 +1,7 @@
 # ==================================
 # PT-Domestic (Direct / China)
 # Policy: DIRECT
-# Total: ~90 Sites
+# Total: 151 Sites
 # ==================================
 HOST-SUFFIX,1ptba.com,DIRECT
 HOST-SUFFIX,13city.org,DIRECT
