--- a/PT-DIRECT.yaml
+++ b/PT-DIRECT.yaml
@@ -125,6 +125,7 @@ HOST-SUFFIX,raingfh.top,DIRECT
 HOST-SUFFIX,rainbowisland.net,DIRECT
 HOST-SUFFIX,redleaves.cc,DIRECT
 HOST-SUFFIX,rousi.zip,DIRECT
+HOST-SUFFIX,rousi.pro,DIRECT
 HOST-SUFFIX,rousipro.net,DIRECT
 HOST-SUFFIX,pt.sjtu.edu.cn,DIRECT
 HOST-SUFFIX,sewerpt.com,DIRECT
